Fix all deprecation warnings